# apihub

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PROJECT.md  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  dto.rs  error.rs  main.rs  middleware.rs
crates/api/src/middleware/: auth.rs
crates/api/src/routes/: admin.rs  auth.rs  chat.rs  groups.rs  keys.rs  mod.rs  stats.rs
crates/core/: Cargo.toml
crates/core/src/: credits.rs  crypto.rs  error.rs  lib.rs  queue.rs  scheduler.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  migrations.rs  models.rs
crates/db/src/repositories/: groups.rs  keys.rs  mod.rs  usage.rs  users.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  lib.rs  openai.rs  provider.rs
docs/: api-reference.md  architecture.md  database.md  deployment.md  development.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Admin.tsx  Dashboard.tsx  Keys.tsx  Login.tsx  Playground.tsx  Register.tsx  Stats.tsx
frontend/src/stores/: auth.ts
scripts/: deploy.sh  startup.sh
