[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
core = { path = "../core" }
db = { path = "../db" }
providers = { path = "../providers" }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Web framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Authentication
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
bytes.workspace = true

# Validation
validator.workspace = true

# OpenAPI
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
