[package]
name = "core"
version.workspace = true
edition.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Crypto
aes-gcm.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
rand.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
async-stream.workspace = true

# HTTP client
reqwest.workspace = true

# Redis
redis.workspace = true
