[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Database
sea-orm.workspace = true
sea-orm-migration.workspace = true
sqlx.workspace = true

# Redis
redis.workspace = true
deadpool-redis.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
